--- a/webpage/buyagrade.html
+++ b/webpage/buyagrade.html
@@ -1,39 +1,45 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-	<head>
-		<title>Buy Your Way to a Better Education!</title>
-		<link href="buyagrade.css" type="text/css" rel="stylesheet" />
-	</head>
-	
-	<body>
-		<h1>Buy Your Way to a Better Education!</h1>
+<head>
+	<title>Buy Your Way to a Better Education!</title>
+	<link href="buyagrade.css" type="text/css" rel="stylesheet" />
+</head>
 
-		<p>
-			The rough economy, along with recent changes in University of Washington policy, now allow us to offer grades for money.  That's right!  All you need to get a 4.0 in this course is cold, hard, cash.
-		</p>
-		
-		<hr />
-		
-		<h2>Give Us Your Money</h2>
-		<dl>
-			<dt>Name</dt>
-			<dd>
-				???
-			</dd>
-			
-			<dt>Section</dt>
-			<dd>
-				???
-			</dd>
-			
-			<dt>Credit Card</dt>
-			<dd>
-				???
-			</dd>
-		</dl>
-		
-		<div>
-			I am a giant sucker.
+<body>
+<div class="container">
+	<h1>Buy Your Way to a Better Education!</h1>
+	<p>
+		The rough economy, along with recent changes in University of Washington
+		policy, now allow us to offer grades for money. That's right! All you
+		need to get a 4.0 in this course is cold, hard, cash.
+	</p>
+	<hr />
+	<h2>Give Us Your Money</h2>
+	<form method="post" action="sucker.php">
+		<div class="input-container">
+			<label for="fname"> Name: </label>
+			<input type="text" id="fname" name="fname" />
 		</div>
-	</body>
+		<div class="input-container">
+			<label for="fname"> Section: </label>
+			<select id="section" name="sections">
+				<option name="ma" value="MA">MA</option>
+				<option value="MH">MH</option>
+			</select>
+		</div>
+		<div class="input-container">
+			<label for="credit-card">Credit Card</label>
+			<input type="text" id="credit-card" name="credit-card" />
+		</div>
+		<div class="input-container">
+			<label for="visa" name="visa">Visa</label>
+			<input type="radio" id="visa" name="card" />
+			<label for="master-card" name="master-card">Master Card</label>
+			<input type="radio" id="master-card" name="master-card" />
+		</div>
+
+		<input type="submit" value="I am a giant sucker" />
+	</form>
+</div>
+</body>
 </html>
